syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "CommonServicesProto";

// ===== Auth Service =====
service Auth {
  rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

// ===== Greeter Service =====
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc ServerStreamHello (HelloRequest) returns (stream HelloResponse);
  rpc ClientStreamHello (stream HelloRequest) returns (HelloResponse);
  rpc Exchange (stream HelloResponseWrapper) returns (stream HelloRequestWrapper);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message HelloRequestWrapper {
  string name = 1;
  string reqId = 2;
}

message HelloResponseWrapper {
  string message = 1;
  string reqId = 2;
}